--- a/admin1/package.json
+++ b/admin1/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "react-to-print": "^3.0.1",
     "react-toastify": "^10.0.6",
     "router-dom": "^3.0.1"
   },
