--- a/admin1/package.json
+++ b/admin1/package.json
@@ -13,12 +13,14 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.1",
+    "@mui/x-charts": "^7.22.0",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-to-print": "^3.0.1",
     "react-toastify": "^10.0.6",
+    "recharts": "^2.13.1",
     "router-dom": "^3.0.1"
   },
   "devDependencies": {
