--- a/frontend1/Dockerfile
+++ b/frontend1/Dockerfile
@@ -26,7 +26,7 @@ FROM nginx:alpine
 COPY --from=build /app/dist /usr/share/nginx/html
  
 # Copy custom Nginx configuration file
-COPY nginx.conf /etc/nginx/sites-enabled/myapp.conf
+COPY nginx.conf /etc/nginx/conf.d/default.conf
  
 # Expose port 80 to the outside world
 EXPOSE 5173
