--- a/frontend1/nginx.conf
+++ b/frontend1/nginx.conf
@@ -1,23 +1,29 @@
-# NGINX Configuration for Frontend1
+server {
+    listen 80;
+    server_name dev.aqua.billbizz.cloud;
+
+    # Redirect HTTP to HTTPS
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
 
 server {
-    listen 80;  # Listen on port 80
-    server_name localhost;  # Change to your domain if necessary
+    listen 443 ssl;  # HTTPS inside the container
+    server_name dev.aqua.billbizz.cloud;
 
-    # Define the root directory for static files
-    root /usr/share/nginx/html;  # Change this if your build output is in a different location
-    index index.html index.htm;  # Default file to serve
+    # Path to the SSL certificate files
+    ssl_certificate /etc/ssl/certs/fullchain.pem;
+    ssl_certificate_key /etc/ssl/private/privkey.pem;
 
-    # Main location block for serving files
+    # SSL settings
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
+    # Serve files
     location / {
-        try_files $uri $uri/ /index.html;  # Serve files or fall back to index.html for SPA
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri $uri/ /index.html;
     }
-
-    # Optional: Add gzip compression for better performance
-    gzip on;
-    gzip_types text/css application/javascript application/json;
-    gzip_min_length 256;
-
-    # Optional: Configure error pages
-    error_page 404 /404.html;  # Custom 404 error page
 }
