--- a/frontend1/nginx.conf
+++ b/frontend1/nginx.conf
@@ -1,24 +1,13 @@
-
-
 server {
-    listen 80;  # Listen on port 80
-    server_name localhost;  # Change to your domain if necessary
+    listen 80;  # Listen on HTTP port 80
+    server_name 3.110.171.51;  # Use IP address instead of domain name
 
-    # Define the root directory for static files
-    root /usr/share/nginx/html;  # Change this if your build output is in a different location
-    index index.html index.htm;  # Default file to serve
-
-    # Main location block for serving files
+    # Serve static files for the website
     location / {
-        try_files $uri $uri/ /index.html;  # Serve files or fall back to index.html for SPA
+        root /usr/share/nginx/html;  # Path where your site files are stored in the container
+        index index.html;
+
+        # SPA (Single Page Application) route handling
+        try_files $uri $uri/ /index.html;
     }
-
-    # Optional: Add gzip compression for better performance
-    gzip on;
-    gzip_types text/css application/javascript application/json;
-    gzip_min_length 256;
-
-    # Optional: Configure error pages
-    error_page 404 /404.html;  # Custom 404 error page
 }
-
