changed to prod db

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-MONGO_URI=mongodb+srv://dev:life%40water@life-water.dv8rs.mongodb.net/?retryWrites=true&w=majority&appName=Life-water
+# MONGO_URI=mongodb+srv://dev:life%40water@life-water.dv8rs.mongodb.net/?retryWrites=true&w=majority&appName=Life-water
+
+# for production
+MONGO_URI=mongodb+srv://info:lifeWater@lifewater.xysqv.mongodb.net/?retryWrites=true&w=majority&appName=LifeWater
